// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component Should be disabled, checked and with value 1`] = `
<label
  className="radio"
  disabled={true}
>
  <input
    checked={true}
    disabled={true}
    name="test"
    type="radio"
    value="TEST"
  />
  <p>
    Default
  </p>
</label>
`;

exports[`Radio component Should concat classname in props with Bulma classname 1`] = `
<label
  className="radio other-class this-is-a-test"
  disabled={false}
>
  <input
    checked={false}
    disabled={false}
    name="test"
    type="radio"
    value=""
  />
  <p>
    Default
  </p>
</label>
`;

exports[`Radio component Should exist 1`] = `[Function]`;

exports[`Radio component Should have radio classname 1`] = `
<label
  className="radio"
  disabled={false}
>
  <input
    checked={false}
    disabled={false}
    name="test"
    type="radio"
    value=""
  />
  Test 
  <a>
    Give me
  </a>
</label>
`;

exports[`Radio component Should use inline styles 1`] = `
<label
  className="radio"
  disabled={false}
  style={
    Object {
      "height": 250,
    }
  }
>
  <input
    checked={false}
    disabled={false}
    name="test"
    type="radio"
    value=""
  />
  <p>
    Default
  </p>
</label>
`;
